# PERT-MCP

./: .aliases  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  sample.env
.github/workflows/: main.yml
hooks/: pre-commit
src/: utils.py
src/app/: dependencies.py  main.py  mcp_server.py  repositories.py  repository.py  schemas.py  services.py  visualise.py
src/app/routers/: activities.py  events.py  graph_db.py  visualise.py
src/scripts/: code-checks.sh
