[project]
name = "pert-mcp"
version = "0.0.1"
description = "An LLM- and MCP-based PERT chart client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "fastapi==0.118.0", 
   "uvicorn==0.37.0",
   "neo4j==6.0.2"
]


[dependency-groups]
dev = [
    "ruff==0.14.0",
    "mypy==1.18.2",
]


[tool.ruff]
lint.extend-select = ["I"]
fix=true

[tool.mypy]
ignore_missing_imports = true
