[project]
name = "pert-mcp"
version = "0.0.1"
description = "An LLM- and MCP-based PERT chart client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru==0.7.3",
    "fastapi==0.118.0", 
    "uvicorn==0.37.0",
    "neo4j==6.0.2",
    "networkx==3.5",
    "matplotlib==3.10.7",
]


[dependency-groups]
dev = [
    "ruff==0.14.0",
    "mypy==1.18.2",
    "fastmcp==2.12.4",
]


[tool.ruff]
lint.extend-select = ["I"]
fix=true

[tool.mypy]
ignore_missing_imports = true
